--- a/scss/month-view.scss
+++ b/scss/month-view.scss
@@ -18,7 +18,7 @@
 
   .cal-cell-row .cal-cell:hover,
   .cal-cell.cal-has-events.cal-open {
-    background-color: #ededed;
+    background-color: #00e9ed;
   }
 
   .cal-days {
@@ -48,7 +48,7 @@
   }
 
   .cal-day-cell:not(:last-child) {
-    border-right: 1px solid #e1e1e1;
+    border-right: 1px solid #d6dee1;
   }
 
   .cal-days .cal-cell-row {
@@ -58,7 +58,7 @@
   .cal-day-badge {
     margin-top: 18px;
     margin-left: 10px;
-    background-color: #b94a48;
+    background-color: #0028b9;
     display: inline-block;
     min-width: 10px;
     padding: 3px 7px;
@@ -121,7 +121,7 @@
   }
 
   .cal-day-cell.cal-drag-over {
-    background-color: darken(#ededed, 5%) !important;
+    background-color: darken(#ed0a00, 5%) !important;
   }
 
   .cal-open-day-events {
